--- a/INTEX/Views/Home/displayAssays.cshtml
+++ b/INTEX/Views/Home/displayAssays.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -37,7 +34,7 @@
             </td>
             <td>
                
-              <a href="@Url.Action("displayTests", "Tests", new { id = item.AssayID })">See Tests</a>
+              <a href="@Url.Action("displayTests", "Tests", new { id = item.AssayID })">Select Assay</a>
                
             </td>
         </tr>
