--- a/INTEX/Views/Tests/displayTests.cshtml
+++ b/INTEX/Views/Tests/displayTests.cshtml
@@ -26,55 +26,54 @@
         </th>
         <th></th>
     </tr>
+            @foreach (var item in Model)
+            {
 
-    @foreach (var item in Model)
-    {
-
-        if (item.Conditional == true)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TestName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BaseCost)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    <p>This test will only run if specific trigger conditions are met. If the test is run, you will be charged additional costs. Do you want to run this test regardless of the triggers?</p>
-                    @Html.DropDownList("Response",
-                   new SelectList(
-                       new[]
-                       {
-                            new { Value = "true", Text = "Yes"},
-                            new { Value = "false", Text = "No"},
-                       },
-                       "Value",
-                       "Text"))
-                </td>
-            </tr>
-        }
-        else
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TestName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BaseCost)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td></td>
-            </tr>
-        }
-    }
+                if (item.Conditional == true)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TestName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.BaseCost)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            <p>This test will only run if specific trigger conditions are met. If the test is run, you will be charged additional costs. Do you want to run this test regardless of the triggers?</p>
+                            @Html.DropDownList("Response",
+                           new SelectList(
+                               new[]
+                               {
+                                    new { Value = "true", Text = "Yes"},
+                                    new { Value = "false", Text = "No"},
+                               },
+                               "Value",
+                               "Text"))
+                        </td>
+                    </tr>
+                }
+                else
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TestName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.BaseCost)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td></td>
+                    </tr>
+                }
+            }
 </table>
 
 <br />
 
-<button class="w3-button w3-xlarge btn-primary" onclick="location.href='@Url.Action("displayAssays", "Home")'">Add Assay</button>
+<button class="w3-button w3-xlarge btn-primary" onclick="location.href='@Url.Action("Create", "Order_Assay_Test", new { workOrderID = ViewBag.workorderid, AssayID = ViewBag.AssayID, TestIDs = ViewBag.testIDs})'">Add Assay</button>
 
