heres the landing page

--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -2,30 +2,54 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="jumbotron ">
+    <h1></h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="w3-card-4 w3-margin w3-white">
+        <img src="~/Content/Images/Lab Photo.jpg" alt="Nature" style="width:100%">
+        <div class="w3-container w3-center">
+            <h3><b>Northwest Labs</b></h3>
+            <h6><i>Tested and True</i></h6>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="w3-card-4 w3-margin w3-dark-gray" style="padding:15px">
+        <div class="row">
+            <div class="col-md-6" style="padding-left:50px">
+            <p class="w3-center" style="font-size:45px"><h3>Current Client</h3></p>
+                </div> 
+            <div class="col-md-6" style="padding-top:10px">
+            <a href="https://asp.net" class="btn btn-primary btn-lg">Access Your Account &raquo;</a>
+            </div>
+        </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
+                <h2>Referred by one of our existing clients?</h2>
+                <p>
+                    Receive a discount on your first order and return the favor to whomever reffered you!
+                </p>
+                <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+                <br />
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
+                <h2>Get a Quote</h2>
+                <p>With thorough and detailed assay testing procedures, we guarantee a hassle-free research process for your compound.</p>
+                <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301866">Quote &raquo;</a></p>
+                <br />
+            </div>
+
+        </div>
+        <div class="col-md-4">
+            <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
+                <h2>Pharmacology Services Catalog</h2>
+                <p>Become familiar with the assays we offer, the tests run within each assay, and the compounds we have worked with in the past.</p>
+                <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301867">View the Catalog &raquo;</a></p>
+
+            </div>
+        </div>
     </div>
-</div>
