--- a/INTEX/Views/Shared/_Layout.cshtml
+++ b/INTEX/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-<body>
+<body class="w3-dark-gray">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -16,13 +17,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("NorthWest Labs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Singapore", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Seattle", "About", "Home")</li>
+                    <li>@Html.ActionLink("Current Customer", "Index", "Home")</li>
+             
                 </ul>
             </div>
         </div>
@@ -30,8 +34,8 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer class="w3-center">
+            <p>&copy; @DateTime.Now.Year - Northwest Labs | @Html.ActionLink("Contact Us", "Contact", "Home")</p>
         </footer>
     </div>
 
