created tracking capabilities

--- a/INTEX/Views/WorkOrders/Details.cshtml
+++ b/INTEX/Views/WorkOrders/Details.cshtml
@@ -51,6 +51,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CompoundName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CompoundName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Complete)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Complete)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.LTNumber)
         </dt>
 
