--- a/INTEX/Views/WorkOrders/Index.cshtml
+++ b/INTEX/Views/WorkOrders/Index.cshtml
@@ -30,6 +30,9 @@
             @Html.DisplayNameFor(model => model.CompoundName)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Complete)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.LTNumber)
         </th>
         <th>
@@ -57,6 +60,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CompoundName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Complete)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.LTNumber)
