edited account model

--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -46,10 +46,32 @@
         </div>
         <div class="col-md-4">
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
+                <h2>Need an Account?</h2>
+                <p>A NorthWest Labs account allows order tracking, order quotes, and order placement</p>
+                <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301867">Create Account &raquo;</a></p>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div >
+                
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
                 <h2>Pharmacology Services Catalog</h2>
                 <p>Become familiar with the assays we offer, the tests run within each assay, and the compounds we have worked with in the past.</p>
                 <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301867">View the Catalog &raquo;</a></p>
 
             </div>
         </div>
+        <div class="col-md-4">
+            <div >
+               
+            </div>
+        </div>
+
     </div>
