Its so close I can feel it

--- a/INTEX/Views/Accounts/displayAccount.cshtml
+++ b/INTEX/Views/Accounts/displayAccount.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "displayAccount";
 }
 
-<h2>@Model.ClientFirstName <br />
+<h2>
     @Model.ClientFirstName <br />
     @Model.ClientLastName <br />
     @Model.AccountID <br />
-    @Model.AccountBalance
+    @Model.AccountBalance<br />
+    @Model.NumberofOrders<br />
 </h2>
 
 
