--- a/INTEX/Views/Home/ClientOrders.cshtml
+++ b/INTEX/Views/Home/ClientOrders.cshtml
@@ -3,34 +3,41 @@
     ViewBag.Title = "ClientOrders";
 }
 
-<h2>Client Orders</h2>
+<h2 class="w3-center">My Orders</h2>
+<hr />
+
 
 @foreach (var item in Model)
 {
-    if (item.ClientID == ViewBag.CID)
-    {
-        <p>Work Order Number: @item.WorkOrderNumber</p>
-        <p>Order Date: @item.OrderDate</p>
-        <p>Compound Name: @item.CompoundName</p>
-        if (item.LTNumber == null)
+    <table class="w3-card-4 w3-blue-gray" style="padding:15px">
+        @if (item.ClientID == ViewBag.CID)
         {
-            <p>Compound is en route to the lab</p>
-            <p>Estimated time till completion: 10 days</p>
-        }
-        else
-        {
-            if (item.Complete == false || item.Complete == null)
+
+            <tr><td style="padding:5px">Order: <b>@item.WorkOrderNumber</b></td></tr>
+            <tr><td style="padding:5px">Order Date: <b>@item.OrderDate</b></td></tr>
+            <tr><td style="padding:5px">Compound Name: <b>@item.CompoundName</b></td></tr>
+            if (item.LTNumber == null)
             {
-                <p>Compound is being tested</p>
-                <p>Estimated time till completion: 5 days</p>
+                <tr><td style="padding:15px">Compound is en route to the lab</td></tr>
+                <tr><td style="padding:15px">Estimated time till completion: 10 days</td></tr>
             }
             else
             {
-                <p>Tests are complete, reports are being compiled and sent to you.</p>
-                <p>Estimated time till completion: Complete</p>
+                if (item.Complete == false || item.Complete == null)
+                {
+                    <tr><td style="padding:15px">Compound is being tested</td></tr>
+                    <tr><td style="padding:15px">Estimated time till completion: 5 days</td></tr>
+                }
+                else
+                {
+                    <tr><td style="padding:15px; text-decoration-line:overline, underline">Tests are complete, reports are being compiled and sent to you.</td></tr>
+                    <tr><td style="padding:15px">Estimated time till completion: <b style="text-shadow: 2px 2px green">Complete</b></td></tr>
+                }
             }
+
         }
-    }
+    </table>
+
 }
 
 
