--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <div class="jumbotron ">
     <h1></h1>
 
-    <div class="w3-card-4 w3-margin w3-white">
+    <div class="w3-card-4 w3-margin w3-dark-gray">
         <img src="~/Content/Images/Lab Photo.jpg" alt="Nature" style="width:100%">
         <div class="w3-container w3-center">
-            <h3><b>Northwest Labs</b></h3>
+            <h3><b style="font-size:40px">Northwest Labs</b></h3>
             <h6><i>Tested and True</i></h6>
         </div>
     </div>
@@ -17,8 +17,8 @@
             <div class="col-md-6" style="padding-left:50px">
             <p class="w3-center" style="font-size:45px"><h3>Current Client</h3></p>
                 </div> 
-            <div class="col-md-6" style="padding-top:10px">
-            <a href="@Url.Action("Login", "Accounts")" class="btn btn-primary btn-lg">Access Your Account &raquo;</a>
+            <div class="col-md-6" style="padding-top:10px; padding-left:180px">
+            <a href="@Url.Action("Login", "Accounts")"  class="btn btn-info btn-lg">Access Your Account &raquo;</a>
             </div>
         </div>
         </div>
@@ -27,19 +27,19 @@
     <div class="row">
         <div class="col-md-4">
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
-                <h2>Referred by one of our existing clients?</h2>
+                <h2>Referred?</h2>
                 <p>
                     Receive a discount on your first order and return the favor to whomever reffered you!
                 </p>
-                <p><a class="btn btn-primary btn-lg" href="@Url.Action("Login", "Accounts")">Learn more &raquo;</a></p>
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Login", "Accounts")">Learn more &raquo;</a></p>
                 <br />
             </div>
         </div>
         <div class="col-md-4">
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
                 <h2>Get a Quote</h2>
-                <p>With thorough and detailed assay testing procedures, we guarantee a hassle-free research process for your compound.</p>
-                <p><a class="btn btn-primary btn-lg" href="@Url.Action("Login", "Accounts")">Quote &raquo;</a></p>
+                <p>With thorough and detailed assay testing procedures, we guarantee your results.</p>
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Login", "Accounts")">Quote &raquo;</a></p>
                 <br />
             </div>
 
@@ -48,29 +48,32 @@
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
                 <h2>Need an Account?</h2>
                 <p>A NorthWest Labs account allows order tracking, order quotes, and order placement</p>
-                <p><a class="btn btn-primary btn-lg" href="@Url.Action("Create", "Home")">Create Account &raquo;</a></p>
-
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Create", "Home")">Create Account &raquo;</a></p>
+                <br />
             </div>
         </div>
     </div>
-
+<br />
+<br />
     <div class="row">
         <div class="col-md-4">
-            <div >
-                
+            <div class="w3-card-4">
+
+                <img src="~/Content/Images/myfavetest.jpg" alt="Nature" style="width:100%">
             </div>
         </div>
         <div class="col-md-4">
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
                 <h2>Pharmacology Services Catalog</h2>
                 <p>Become familiar with the assays we offer, the tests run within each assay, and the compounds we have worked with in the past.</p>
-                <p><a class="btn btn-primary btn-lg" href="https://go.microsoft.com/fwlink/?LinkId=301867">View the Catalog &raquo;</a></p>
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important; color:white" href="https://go.microsoft.com/fwlink/?LinkId=301867">View the Catalog &raquo;</a></p>
 
             </div>
         </div>
         <div class="col-md-4">
-            <div >
-               
+            <div class="w3-card-4">
+
+                <img src="~/Content/Images/moretests.jpg" alt="Nature" style="width:100%">
             </div>
         </div>
 
