--- a/INTEX/Views/Shared/_Layout.cshtml
+++ b/INTEX/Views/Shared/_Layout.cshtml
@@ -20,12 +20,12 @@
                 @Html.ActionLink("NorthWest Labs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" style="float:right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Singapore", "Index", "Home")</li>
                     <li>@Html.ActionLink("Seattle", "About", "Home")</li>
-                    <li>@Html.ActionLink("Current Customer", "Index", "Home")</li>
+                   
              
                 </ul>
             </div>
