--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
             <div class="w3-card-4 w3-light-gray w3-center" style="padding:6px">
                 <h2>Get a Quote</h2>
                 <p>With thorough and detailed assay testing procedures, we guarantee your results.</p>
-                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Login", "Accounts")">Quote &raquo;</a></p>
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Quote", "Home")">Quote &raquo;</a></p>
                 <br />
             </div>
 
