--- a/INTEX/Views/WorkOrders/Index.cshtml
+++ b/INTEX/Views/WorkOrders/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.WorkOrderNumber)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.OrderDate)
         </th>
         <th>
@@ -43,6 +46,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.WorkOrderNumber)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.OrderDate)
         </td>
